<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <com.bast.lamzone.utils.Slider
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/boxfilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <RadioButton
                android:id="@+id/radioRoom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/imgSalle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/imgSalle" />

            <ImageView
                android:id="@+id/imgSalle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_business_black_24dp"
                android:text="@string/txtChoixSalle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/radioRoom"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/gridSalle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                app:layout_constraintBottom_toBottomOf="@id/imgSalle"
                app:layout_constraintStart_toEndOf="@id/imgSalle"
                app:layout_constraintTop_toTopOf="@id/imgSalle">

                <CheckBox
                    android:id="@+id/salle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Salle 1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <CheckBox
                    android:id="@+id/salle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Salle 2"
                    app:layout_constraintStart_toEndOf="@id/salle1"
                    app:layout_constraintTop_toTopOf="parent" />

                <CheckBox
                    android:id="@+id/salle3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Salle 3"
                    app:layout_constraintStart_toEndOf="@id/salle2"
                    app:layout_constraintTop_toTopOf="parent" />

                <CheckBox
                    android:id="@+id/salle4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Salle 4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/salle1" />

                <CheckBox
                    android:id="@+id/salle5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Salle 5"
                    app:layout_constraintStart_toEndOf="@id/salle4"
                    app:layout_constraintTop_toBottomOf="@id/salle2" />

                <CheckBox
                    android:id="@+id/salle6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Salle 6"
                    app:layout_constraintStart_toEndOf="@id/salle5"
                    app:layout_constraintTop_toBottomOf="@id/salle3" />

                <CheckBox
                    android:id="@+id/salle7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Salle 7"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/salle4" />

                <CheckBox
                    android:id="@+id/salle8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Salle 8"
                    app:layout_constraintStart_toEndOf="@id/salle7"
                    app:layout_constraintTop_toBottomOf="@id/salle4" />

                <CheckBox
                    android:id="@+id/salle9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Salle 9"
                    app:layout_constraintEnd_toEndOf="@id/salle6"
                    app:layout_constraintStart_toStartOf="@id/salle6"
                    app:layout_constraintTop_toBottomOf="@id/salle6" />

                <CheckBox
                    android:id="@+id/salle10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Salle 10"
                    app:layout_constraintEnd_toEndOf="@id/salle8"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="@id/salle8"
                    app:layout_constraintTop_toBottomOf="@id/salle8" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/viewDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="#959292"
                app:layout_constraintTop_toBottomOf="@id/gridSalle" />

            <RadioButton
                android:id="@+id/radioDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/imgClock"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/imgClock" />

            <ImageView
                android:id="@+id/imgClock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_event_black_24dp"
                app:layout_constraintBottom_toBottomOf="@id/btnFilterDate"
                app:layout_constraintStart_toEndOf="@id/radioDate"
                app:layout_constraintTop_toTopOf="@id/btnFilterDate" />

            <TextView
                android:id="@+id/btnFilterDate"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@id/btnFilterDate"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@id/imgClock"
                app:layout_constraintTop_toBottomOf="@id/viewDivider" />

            <View
                android:id="@+id/viewDivider3"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginTop="15dp"
                android:background="#020202"
                app:layout_constraintTop_toBottomOf="@id/btnFilterDate" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/list_items" />

    </com.bast.lamzone.utils.Slider>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:backgroundTint="@android:color/holo_red_dark"
        app:srcCompat="@drawable/ic_add_white_24dp"
        app:tint="@android:color/white" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>