<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="30dp"
    android:theme="@style/Theme.Frag"
    tools:context=".ui.CreateReuFrag">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtReu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/CreerReu"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnCreate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/Enregistrer"
                android:textSize="12sp"
                android:theme="@style/ButtonTheme"
                app:layout_constraintBottom_toBottomOf="@id/txtReu"
                app:layout_constraintEnd_toEndOf="@id/txtReu"
                app:layout_constraintTop_toTopOf="@id/txtReu" />

            <View
                android:id="@+id/viewDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="#959292"
                app:layout_constraintTop_toBottomOf="@id/txtReu" />

            <ImageView
                android:id="@+id/imgClock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/ic_access_time_black_24dp"
                app:layout_constraintBottom_toBottomOf="@id/btnCreaDate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/btnCreaDate" />

            <TextView
                android:id="@+id/btnCreaDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@id/imgClock"
                app:layout_constraintTop_toBottomOf="@id/viewDivider" />

            <TextView
                android:id="@+id/textHeureDebut"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                app:layout_constraintBottom_toBottomOf="@id/btnHeureCreaDebut"
                app:layout_constraintEnd_toStartOf="@id/btnHeureCreaDebut"
                app:layout_constraintTop_toTopOf="@id/btnHeureCreaDebut" />


            <TextView
                android:id="@+id/btnHeureCreaDebut"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:paddingEnd="10dp"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnCreaDate" />

            <TextView
                android:id="@+id/textHeureFin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                app:layout_constraintBottom_toBottomOf="@id/btnHeureCreaFin"
                app:layout_constraintEnd_toStartOf="@id/btnHeureCreaFin"
                app:layout_constraintStart_toStartOf="@id/textHeureDebut"
                app:layout_constraintTop_toTopOf="@id/btnHeureCreaFin" />


            <TextView
                android:id="@+id/btnHeureCreaFin"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:paddingEnd="10dp"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnHeureCreaDebut" />

            <View
                android:id="@+id/viewDivider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="#959292"
                app:layout_constraintTop_toBottomOf="@id/btnHeureCreaFin" />

            <ImageView
                android:id="@+id/imgSalle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/ic_business_black_24dp"
                app:layout_constraintBottom_toBottomOf="@id/spinSalle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/spinSalle" />

            <Spinner
                android:id="@+id/spinSalle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toEndOf="@id/imgSalle"
                app:layout_constraintTop_toBottomOf="@id/viewDivider2" />

            <View
                android:id="@+id/viewDivider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="#959292"
                app:layout_constraintTop_toBottomOf="@id/spinSalle" />

            <ImageView
                android:id="@+id/imgHost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/ic_person_black_24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewDivider3" />

            <EditText
                android:id="@+id/editHost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="#02FAF9F9"
                android:hint="@string/hintHost"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="@id/imgHost"
                app:layout_constraintStart_toEndOf="@id/imgHost"
                app:layout_constraintTop_toTopOf="@id/imgHost" />

            <View
                android:id="@+id/viewDivider4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="#959292"
                app:layout_constraintTop_toBottomOf="@id/editHost" />

            <ImageView
                android:id="@+id/imgParti"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/ic_group_black_24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewDivider4" />

            <EditText
                android:id="@+id/editParti"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="#02FAF9F9"
                android:hint="@string/hintParti"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toBottomOf="@id/imgParti"
                app:layout_constraintStart_toEndOf="@id/imgParti"
                app:layout_constraintTop_toTopOf="@id/imgParti" />

            <Button
                android:id="@+id/btnAddParti"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@drawable/ic_add_white_24dp"
                android:theme="@style/ButtonTheme"
                app:layout_constraintBottom_toBottomOf="@id/editParti"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.9"
                app:layout_constraintStart_toEndOf="@id/editParti"
                app:layout_constraintTop_toTopOf="@id/editParti" />

            <TextView
                android:id="@+id/textAddParti"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@id/editParti"
                app:layout_constraintStart_toStartOf="@id/editParti"
                app:layout_constraintTop_toBottomOf="@id/editParti" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvListParti"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/textAddParti"
                app:layout_constraintTop_toBottomOf="@id/textAddParti"
                tools:listitem="@layout/list_items_parti" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>