...
                    android:theme="@style/backReunion"
                    android:columnCount="2"
                    android:padding="20dp"
                    android:rowCount="5">

                    <TextView
                        android:id="@+id/gridNom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="0"
                        android:layout_columnSpan="2"
                        android:paddingBottom="10dp"
                        android:textSize="30sp" />
...
